static/css/base.css
/* ... */
.gallery-images{
  height:300px;
  width:450px;
  position: relative;
}

.gallery-images:hover{
  filter:grayscale(100%);
}

.gallery-image-left{
  border-radius: 20px 0 0 20px;
  border-right: 4px solid #fff;
}

.gallery-image-right{
  border-radius: 0 20px 20px 0;
  border-left: 4px solid #fff;
}

.gallery-link{
  text-decoration: none;
  color:var(--main-text-color);
  font-family: var(--main-font);
  font-size: 1.rem;
  background-color: var(--main-background-color);
  padding: 15px;
  position: relative;
  bottom:45px;
  left:15px;
  font-weight: 700;
  border-radius: 10px;
  overflow: hidden;
}

.gallery-link:hover{
  text-decoration: none;
  color:#f7f7f7;
  background-color: var(--main-text-color);
}

.price-container{
  position:relative;
  top:-40px;
  padding:20px;
  width:60%;
  text-align: center;
  border-radius: 20px;
  font-family: var(--main-font);
  color:var(--main-text-color);
  font-size: 2rem;
  font-weight: 700;
}

.about-container{
  width: 60px;
  height: 100%;
  padding-right: 15px;
  padding-left: 15px;
  position: relative;
  left:10%;
}

.description-container h3{
  padding-bottom: 20px;
}

.description-container p{
  width:70%; text-align: justify;
}


#availability-container{
  position:sticky;
  font-family: var(--main-font);
  color:#000;
  top:80px;
  width:80%;
  height:520px;
  left:50%;
  border-radius: 20px;
  z-index: 5;
  background-color: #fff;
  padding:20px;
}

#availability-container h3{
  font-family:var(--main-font);
  color:var(--main-text-color);
  text-align: center;
}

#calender{
  position: relative;
  left:20px;
  width:80%;
  height: 50%;
}


/* minmise size of month and year in calendar header, 
and make the calendar smaller overall 
to fit in the availability container */
.fc-toolbar-title{
  font-size: 1.2rem !important;
}

.fc-view-harness{
  height: 350px !important;
  width: 100% !important;
  overflow: hidden !important;
  border-radius: 10px !important;
}

td{
  border: solid 3px #fff !important;
  height: 20px !important;
  border-radius: 10px !important;
}

/* .fc-scrollgrid-sync-table{
  display:none !important;
} */


.fc-daygrid-day-top{
  width:90% !important;
  height: 100% !important;
}

.fc-daygrid-day-number{
  height: 10px !important;
}


/* style for the "Available" text on the calendar, 
to make it smaller and more subtle, 
and to ensure it doesn't overlap with the day numbers 
or other calendar elements */
.fc-event-title{
  font-size: 0.8rem !important;
  color: #fff !important;
  font-weight: 700 !important;
  position: relative;
  top:40% !important;
}


#availability-container td{
  background-color:rgb(255, 255, 255) !important;

}

#availability-container p{
  font-size: 1.2rem;
  text-align: center;
  padding-top:20px;
}

#amenities-display-btn{
  position: relative;
  left:50px;
}

.amenities-container{
  font-family: var(--main-font);
  color:var(--main-text-color);
  position:relative;
  left:40px;
  width:100%;
  height: 50%;
  padding: 20px;
  border-radius: 20px;
  overflow-y:scroll;
  margin-top: 20px;
}

.contact-container{
  font-family: var(--main-font);
  color:var(--main-text-color);
  position: relative;
  left:40px;
  width:100%;
  height: 400px;
  margin-top: 20px;
  padding:20px;
  border-radius: 20px;
}

#images-display{
  position: relative;
  top:30%;
  left:15%;
}

.rental-detail-image-display{
  height:500px;
  width:800px;
  margin:1px;
  border-radius: 10px;
}

.image-name{
  font-family: var(--main-font);
  color:#fff;
  position: relative;
  border-radius: 0 0 10px 10px;
  top:-50px;
  background-color: rgba(75, 67, 67, 0.8);
  width:802px;
  height:50px;
  padding-top: 10px;
  text-align: center;
  font-size: 1.4rem;
}

.image-changer{
  position:relative;
  z-index: 99999999999999999999;
  color:var(--main-text-color);
  font-size: 2rem;
  font-weight: bolder;
  background-color:rgba(255, 255, 255, 0.8);
  height:100px;
  top:55%;
  border-radius: 10px;
}


#previous-image{
  /* margin-top:200px */
  display:none;
}

.close-icon{
  position: absolute;
  z-index: 99999999999999999999;
  top:100px;
  right:20px;
  font-size: 2.5rem;
  color:#fff;
  cursor: pointer;
  padding:0px;
}

.close-icon:hover{
  transform: scale(1.2);
}

/* ---------------------list your home page includes styles for all forms */

.form-header{
  font-size:1.8rem;
}



.form-container{
  padding:50px;
  border: 40px solid var(--main-background-color);
  border-radius:20px;
} 


.form-container input,
.form-container textarea,
.form-container select{
  border-bottom: 1px rgba(117, 187, 167, 0.9) solid !important;
  border: none;
  outline: none;
  width:100% !important;
  text-align: left;
  padding-left:20px;
}


.form-container select{
  color:var(--main-text-color);
}

.form-container option:hover{
  background-color:red !important
}

.form-container input{
  height:30px;
}

.form-container textarea{
  height:200px;
  resize:none
}

.form-container label{
  font-size:0.8rem;
  position:relative;
}

.form-container input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.list-form-input{
  border: 1px var(--main-text-color) solid;
  background-color: var(--main-background-color);
  font-family: var(--main-font);
  width:600px !important;
}

input[type="file"]{
  border: none;
  outline: none;
  font-family: var(--main-font);
}

.second-list{
  display:none;
}

/* -------------------------------------------------sign up etc */
.sign-in-image{
  background-image:url("/media/sign_in_bg.png");
  height:100%;
}

.sign-box{
  font-family: var(--main-font);
  background-color: var(--main-background-color);
  border-radius: 20px;
  width:33%;
  height:400px;
  margin-left: 33%;
  text-align: center;
  padding:50px;
}

.sign-in-up-box{
  font-family: var(--main-font);
  background-color: var(--main-background-color);
  border-radius: 20px;
  width:66%;
  height:400px;
  margin-left: 13%;
  text-align: center;
  padding:50px;
}

.sign-form{
  text-align:left;
}
/* ... */

